change style and href

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </head>
   <body>
     <main class="main">
-      <h1>Joyeux anniversaire Antho ! 🎉</h1>
+      <h1>Joyeux anniversaire Antho ! 🎉❤</h1>
       <a
-        href="https://www.canva.com/design/DAGd4BP9wQA/XI2hJ4GSIqV5JWwVeykVKg/view?utm_content=DAGd4BP9wQA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h8ed79cf3fb/"
+        href="https://www.canva.com/design/DAGd4BP9wQA/XI2hJ4GSIqV5JWwVeykVKg/view?utm_content=DAGd4BP9wQA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h8ed79cf3fb"
         target="_blank"
         rel="noopener noreferrer"
         >Surprise 🎁</a
